--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@turf/turf": "^7.2.0",
     "antd": "^5.26.1",
     "axios": "^1.10.0",
+    "framer-motion": "^12.18.1",
     "jwt-decode": "^4.0.0",
     "mapbox-gl": "^3.13.0",
     "react": "^19.1.0",
